more on creeping

--- a/Couette.tex
+++ b/Couette.tex
@@ -59,9 +59,11 @@ The tensor is also constant throughout the fluid.
 
 This has physical importance, since both plates will feel a total
 stress force
-\[
-F= A \epsilon_{xy} = \mu A \frac{u_0}{L} .
-\]
+\begin{equation}
+  \label{eq:Couette_force}
+  F= A \epsilon_{xy} = \mu A \frac{u_0}{L} .
+\end{equation}
+
 
 This force must be maintained on the moving plate in order to keep the
 steady flow (the fixed one must be anchored, and should resist the
