--- a/Poiseuille.tex
+++ b/Poiseuille.tex
@@ -33,9 +33,10 @@ For the velocity, we must solve for
 given the boundary conditions $u_x(y=0)=u_x(y=L)=0$.
 
 The solution is
-\[
-u_x=\frac{c}{2\nu} y (L-y)
-\]
+\begin{equation}
+  \label{eq:Poiseuille_u}
+  u_x=\frac{c}{2\nu} y (L-y)  
+\end{equation}
 
 The flow is
 \[
