--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -272,9 +272,11 @@ called ``pathlines'' \index{pathline}.
 For steady flow, it is often convenient to define a vector potential
 \index{vector potential} in much the same way as it is done for the
 magnetic field in electromagnetism:
-\[
+\begin{equation}
+  \label{eq:vector_potential}
   \bfu = \nabla\times \bfA .
-\]
+\end{equation}
+
 The resulting velocity field will always be incompressible, since the
 divergence of a curl is zero.
 
@@ -327,8 +329,8 @@ also from the identity for the curl of the curl
 \cite{wiki:Vector_calculus_identities}:
 \begin{equation}
   \label{eq:curl_of_curl}
-  \nabla \times \left(\nabla \times \mathbf {A} \right)=
-  \nabla (\nabla \cdot \mathbf {A} )-\nabla^{2}\mathbf {A} .
+  \nabla \times \left(\nabla \times \bfA \right)=
+  \nabla (\nabla \cdot \mathbf {A} )-\nabla^2\bfA .
 \end{equation}
 
 Then, since the velocity field is curl-free:
@@ -567,10 +569,14 @@ satisfies Laplace's equation for a curl-free flow.
 However, the choice of $A=\psi$ does \emph{not} result in the correct
 stream-line behavior of Eq.  \ref{eq:stream_perp_to_u}. The following
 choice, however, does:
-\[
-  \bfA = \frac{\psi(r,\theta)}{r \sin\theta } \bhe_\phi .
-\]
-This is called ``Stokes' stream function''.
+\begin{equation}
+  \label{eq:Stokes_stream_spherical}
+  \bfA = \frac{\psi(r,\theta)}{r \sin\theta } \bhe_\phi .    
+\end{equation}
+%
+This $\psi$ is called ``Stokes' stream function''\index{Stokes' stream
+  function}, but there is no fundamental difference with the usual,
+2D, stream function.
 
 The resulting velocity field for spherical coordinates is then found
 to be
@@ -581,7 +587,6 @@ to be
     u_\theta &= -\frac1{r   \sin\theta} \frac{\partial \psi}{\partial r}
   \end{split}
 \end{equation}
-
 
 For completeness, in cylindrical coordinates the appropriate
 expression is
@@ -598,16 +603,16 @@ resulting velocity field is
 \end{equation*}
 
 
-
 For the flow around a sphere, the resulting stream function is then
 found to be
-\[
-  \psi(r,z) = \frac12 u_0 r^2
+\begin{equation}
+  \label{eq:potential_sphere_stream}
+  \psi(r,\theta) = \frac12 u_0 r^2
   \left[
     1 -
     \left(\frac{R}{r}\right)^3
   \right] \sin^2\theta .
-\]
+\end{equation}
 Again, this is found by working backwards from the known solution.
 See Exercise \ref{ex:u_from_psi_spher}) to derive the velocity field
 from $\psi$.
@@ -669,3 +674,45 @@ sphere are in Fig. \ref{fig:potential_streamlines_moving_sphere}.
 
 
 \end{itemize}
+
+
+%FOR POTENTIAL.TEX:
+
+
+
+
+In axisymmetric flow,
+\[
+  \divu =
+  {1 \over r^2}{\partial \left( r^2 u_r \right) \over  \partial r} +
+  {1 \over r\sin\theta}{\partial \over \partial  \theta} \left( u_\theta\sin\theta \right) ,
+\]
+but an equivalent expression is
+\[
+  \divu =
+  {\partial \left( r^2 u_r \sin\theta \right) \over  \partial r} +
+  {\partial \left( r u_\theta\sin\theta \right)  \over \partial  \theta}
+\]
+
+so continuity is trivially satisfied with the choice
+\ref{eq:u_from_psi_spherical}.
+
+
+From the curl in spherical coordinates,
+\begin{align}
+  u_r     &= \frac {1}{r\sin \theta }
+            \frac{ \left( \partial A  \sin \theta \right) }{\partial \theta }  \\
+  u_\theta &= -\frac1{r} \frac{\partial (rA) }{\partial r} 
+\end{align}
+and we find
+\begin{equation}
+%  \label{eq:u_from_psi_spherical}
+  \begin{split}
+    u_r     &=  \frac1{r^2 \sin\theta} \frac{\partial \psi}{\partial \theta} \\
+    u_\theta &= -\frac1{r   \sin\theta} \frac{\partial \psi}{\partial r}
+  \end{split}
+\end{equation}
+
+
+
+Notice $A=\psi / \rho $ also in spherical coordinates !
