more on creeping

--- a/Euler.tex
+++ b/Euler.tex
@@ -215,8 +215,8 @@ causing a volumetric force
 Surface forces may in turn may split into compression and stress
 forces. The latter are absent in an ideal fluid by definition, and we
 are left only with compression. This effect is caused by the best
-known surface force field: the pressure. Indeed, a pressure
-on the left wall of the particle will cause a horizontal force
+known surface force field: the pressure. Indeed, a pressure on the
+left wall of the particle will cause a horizontal force
 \[
 \left. F_{p,x} \right|_\text{l} =
   p  dy\, dz .
