--- a/Fluid_Mechanics.tex
+++ b/Fluid_Mechanics.tex
@@ -53,7 +53,9 @@
 %Reference symbols: $\gls{x}$, $\gls{v}$, $\gls{a}$, $\gls{t}$, $\gls{F}$.
 
 \include{chapter_viscous}
-%\input{etc}
+%\input{creeping2}
+
+% \input{etc}
 
 \nocite{*}
 
