--- a/creeping.tex
+++ b/creeping.tex
@@ -281,7 +281,7 @@ answer should come as a force per length in the perpendicular
 direction (as e.g. the lift for our cylinder with circulation of
 \ref{sec:}). I.e.
 \[
-  \fracDR \sim \mu u_0 .
+  \frac{D}{R} \sim \mu u_0 .
 \]
 But this makes no sense, since all dependence on $R$ is lost --- and
 there is not clear candidate to provide another length parameter.
