--- a/membrane.tex
+++ b/membrane.tex
@@ -104,7 +104,7 @@ of Fig. \ref{fig:cube_for_stresses}. The minus sign arises because
 these forces are the reaction to the forces exerted by the wall upon
 the particles closeby. (If this is confusing, recall that in
 Poiseuille flow the force upon the walls of Eq \ref{eq:Couette_force}
-of course goes \emph{against} the flow.}
+of course goes \emph{against} the flow.)
 
 Since our fluid is Newtonian, Eqs. \ref{eq:tau_diagonal} and
 \ref{eq:tau_off_diagonal} yield
